# OctWa

./: .env.example  .gitignore  BUILD_TEST_RESULTS.md  MOBILE_RESPONSIVE_GUIDE.md  OCTRA_SDK_AND_WALLET_EXTENSION_AUDIT.md  README.md  SECURITY.md  UI_UX_BUG_FIXES.md  _LANDING_MOBILE_GUIDE.md  index.html  migration_to_new_octra_client.md  offscreen.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
.github/workflows/: release-pvac-server.yml  static.yml
.kiro/specs/octra-client-migration/: design.md  requirements.md  tasks.md
extensionFiles/: README.md  background.js  canonical-core.js  content.js  core.js  manifest.json  popup.html  provider.js
landing/: index.html
landing/src/: App.tsx  landing.css
pvac_server/: .gitignore  CMakeLists.txt  README.md  auto-build.sh  build-linux.sh  build-wasm.sh  build-windows.ps1  build.sh  release-linux.sh  release-windows.ps1
pvac_server/lib/: crypto_utils.hpp  pvac_bridge.hpp  stealth.hpp  tx_builder.hpp
pvac_server/pvac/include/pvac/core/: bitvec.hpp  random.hpp
pvac_server/pvac/include/pvac/crypto/: lpn.hpp  toeplitz.hpp
pvac_server/pvac/include/pvac/crypto/bulletproofs/: generators.hpp
pvac_server/src/: auth.hpp  handlers.hpp  logger.hpp  main.cpp  pvac_ops.hpp  pvac_ops_parallel.hpp  server.hpp
pvac_server/wasm/: README.md  patch-for-wasm.sh  pvac-wasm.ts  pvac_wasm_bridge.c
sample-dapp/: README.md  index.html
scripts/: analyze-bundle.mjs  copy-extension-files.mjs
sdk/: AUDIT.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdk/src/: canonical.ts  capability-manager.ts  capability-service.ts  crypto.ts  errors.ts  evm-types.ts  evm.ts  gas-service.ts  index.ts  intents.ts  response-utils.ts  sdk.ts  types.ts  utils.ts
sdk/tests/: parity.test.ts  reads.test.ts  sdk.test.ts  wire.test.ts
sdk/tests/harness/: README.md  cli.ts
sdk/tests/harness/browser/: smoke.html
sdk/tests/mocks/: provider.ts
src/: App.css  App.tsx  ExpandedApp.tsx  PopupApp.tsx  expanded.tsx  index.css  main.tsx  nova.css  offscreen.ts  polyfills.ts  popup.tsx  vite-env.d.ts
src/adapters/: factory.ts  nextClientAdapter.ts  preClientAdapter.ts  types.ts
src/adapters/chain/: BitcoinAdapter.ts  CosmosAdapter.ts  EvmAdapter.ts  SolanaAdapter.ts  TronAdapter.ts  index.ts  types.ts
src/components/: ActivityPanel.tsx  AddWalletPopup.tsx  AddressBook.tsx  AddressInput.tsx  AnimatedIcon.tsx  Balance.tsx  BalancePieChart.tsx  CapabilityApprovalDialog.tsx  ChainSelector.tsx  ClaimTransfers.tsx  ConnectedDAppsManager.tsx  ContractPanel.tsx  DAppConnection.tsx  DAppRequestHandler.tsx  DecryptBalanceDialog.tsx  DecryptionConsentDialog.tsx  DevTools.tsx  DraggableWalletList.tsx  EVMAssets.tsx  EncryptBalanceDialog.tsx  EncryptedValueDisplay.tsx  ExportPrivateKeys.tsx  FeeSelector.tsx  FileMultiSend.tsx  GenerateWallet.tsx  ImportWallet.tsx  InfoTooltip.tsx  JobStatusIndicator.tsx  ModeIndicator.tsx  ModeSwitchConfirmDialog.tsx  ModeToggle.tsx  MultiSend.tsx  OctraAssets.tsx  OnboardingOverlay.tsx  PageTransition.tsx  PasswordSetup.tsx  PrivateBalance.tsx  PrivateTransfer.tsx  PublicBalance.tsx  PvacOperationModal.tsx  (+23 more)
src/components/OctraBackground/: OctraBackground.tsx  config.ts  index.ts  shaders.ts
src/components/ui/: alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  input-otp.tsx  input.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  sheet.tsx  skeleton.tsx  slider.tsx  switch.tsx  tabs.tsx  textarea.tsx  toast.tsx  toaster.tsx  toggle.tsx  tooltip.tsx  visually-hidden.tsx
src/events/: eventBus.ts
src/hooks/: use-toast.ts  useAddressBook.ts  useBackgroundDecryptResponder.ts  useBackgroundSyncResponder.ts  useCachedWalletData.ts  useOctPrice.ts  useOptimisticBalance.ts  usePvacOperation.ts
src/integrations/ons/: README.md  cache.ts  client.ts  config.ts  index.ts  react.ts
src/lib/pvac/: PROGRESS.md  balance-ops.ts  crypto-utils.ts  index.ts  node-registration.ts  pvac-worker-client.ts  pvac-worker.ts  rpc-override.ts  stealth-ops.ts  types.ts  wasm-loader.ts
src/lib/pvac/wasm-runtime/: pvac-wasm.ts
src/permissions/: permissionManager.ts  types.ts
src/services/: cacheService.ts  decryptionService.ts  encryptedBalanceService.ts  octraTokens.ts  optimisticUpdateService.ts  pvacServerService.ts  rangeProofServer.ts  rpcHelper.ts  stealthScanService.ts
src/stores/: jobStore.ts
src/types/: addressBook.ts  chain.ts  encrypted.ts  pvac-wasm.d.ts  wallet.ts
src/utils/: addressBook.ts  api.ts  balanceCalculator.ts  capability.ts  chainConfig.ts  crypto.ts  ensurePvacRegistered.ts  evmDerive.ts  evmRpc.ts  explorer.ts  extensionStorage.ts  historyMerge.ts  keccak256.ts  keyManager.ts  logger.ts  minLoading.ts  modeStorage.ts  onsBootstrap.ts  optimisticTransactionWrapper.ts  password.ts  rpc.ts  rpcDefaults.ts  rpcStatus.ts  wallet.ts  walletEncryption.ts  walletManager.ts
